ES2015. Map is working

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,7 @@
     <script src="../dist/gmap-core.js"></script>
     <script>
         var google_maps_key = 'AIzaSyCwJU4t7ZvGGVkdoqBBK7xvlED9CyK49qM';
-        new GMap('map', [{name: 'Home', pos: { lat: 50.0117, lng: 36.309 }}], {zoom: 15});
+        var map = new GMap('map', [{name: 'Home', pos: { lat: 50.0117, lng: 36.309 }}], {zoom: 15});
     </script>
 </body>
 </html>
