--- a/demo/index.html
+++ b/demo/index.html
@@ -7,11 +7,13 @@
     <title>Demo</title>
     <style>
         #map, #gmap-container { height: 500px }
+        #map { margin-bottom: 100px; }
+        #zmap { height: 300px; }
     </style>
 </head>
 <body>
     <div id="map"></div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
     <script src="../dist/gmap-core.js"></script>
     <script>
         var google_maps_key = 'AIzaSyCwJU4t7ZvGGVkdoqBBK7xvlED9CyK49qM';
