--- a/demo/index.html
+++ b/demo/index.html
@@ -7,17 +7,15 @@
     <title>Demo</title>
     <style>
         #map, #gmap-container { height: 500px }
-        #map { margin-bottom: 100px; }
-        #zmap { height: 300px; }
     </style>
 </head>
 <body>
     <div id="map"></div>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
-    <script src="../dist/gmap-core.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="../dist/gmap.js"></script>
     <script>
         var google_maps_key = 'AIzaSyCwJU4t7ZvGGVkdoqBBK7xvlED9CyK49qM';
-        var map = new GMap('map', [{name: 'Home', pos: { lat: 50.0117, lng: 36.309 }}], {zoom: 15});
+        var map = new GMap('map', [{name: 'Home', pos: { lat: 50.0117, lng: 36.309 }}, {name: 'Second Home', pos: { lat: 48.0117, lng: 37.309 }}], {zoom: 15});
     </script>
 </body>
 </html>
